--- a/src/app/BOM/BOM.component.css
+++ b/src/app/BOM/BOM.component.css
@@ -1,11 +1,39 @@
-tr:hover{
+tr:hover {
     background-color: rgb(238, 238, 238);
 }
-.antras{
+
+.antras {
     position: relative;
     top: 10%;
-
 }
-table{
+
+.badge {
+    text-transform: uppercase;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+table {
     max-height: 30%;
+}
+
+.nerastas {
+    color: red;
+}
+
+.ok {
+    color: green;
+}
+
+a:hover,
+.link:hover {
+    font-weight: 500;
+    cursor: default;
+}
+
+.soso {
+    background-color: rgba(255, 166, 0, 0.171);
+}
+
+table {
+    width: 100%;
 }
