--- a/src/app/BOM/BOM.component.html
+++ b/src/app/BOM/BOM.component.html
@@ -1,160 +1,137 @@
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">BOM Manager</h1>
-
-  <div class="btn-toolbar mb-2 mb-md-0">
-
-    <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" (ngSubmit)="GetBomNames()"
-      novalidate>
-      <div class="px-1">
-        <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.."
-          class="form-control form-control-sm">
-      </div>
-
-      <div class="btn-group mr-2">
-        <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
-        <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
-      </div>
-
-    </form>
-
-  </div>
-
-
-</div>
-
-<div class="row">
-  <div class="col-sm-4">
-    <app-upload (bomuploaded)="ngOnInit()"></app-upload>
-  </div>
-  <div class="col-sm-8">
-    <div class="containeris">
-
-      <table id="mytable" class="table table emp-profile">
-
-        <thead class="">
-          <tr>
-            <th></th>
-            <th>BOM name</th>
-            <th>Date Added</th>
-            <th>Last Modified</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-       
-      </table>
-      <div style="height: 225px !important; overflow-y: auto;">
-        <table id="mytable" class="table table emp-profile">
-
-          <thead class="">
-          </thead>
-          
-            <tbody>
-              
-              <tr *ngFor="let bomName of bomNames" [routerLink]="['/bom/', bomName.name]">
-                <td></td>
-                <td>{{bomName.name}}</td>
-                <td>{{bomName.dateAdded | date}} </td>
-                <td>{{bomName.lastModified | date}}</td>
-                <td><svg (click)="deleteBom(bomName.name)" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                    stroke-linejoin="round" class="feather feather-trash-2">
-                    <polyline points="3 6 5 6 21 6"></polyline>
-                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                    <line x1="10" y1="11" x2="10" y2="17"></line>
-                    <line x1="14" y1="11" x2="14" y2="17"></line>
-                  </svg>
-                </td>
-              </tr>
-            </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="antras">
-  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">TASKS List</h1>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom ">
+    <h1 class="h2">BOM Manager</h1>
 
     <div class="btn-toolbar mb-2 mb-md-0">
 
-      <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" novalidate>
-        <div class="px-1">
-          <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.."
-            class="form-control form-control-sm">
-        </div>
+        <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" (ngSubmit)="GetBomNames()" novalidate>
+            <div class="px-1">
+                <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.." class="form-control form-control-sm">
+            </div>
 
-        <div class="btn-group mr-2">
-          <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
-          <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
-        </div>
+            <div class="btn-group mr-2">
+                <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
+                <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
+            </div>
 
-      </form>
+        </form>
 
     </div>
 
 
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
+</div>
 
-      <app-create [bomNames]="bomNames"></app-create>
+
+
+
+<div class="row">
+    <div class="col-sm-4">
+        <app-upload (bomuploaded)="ngOnInit()"></app-upload>
     </div>
     <div class="col-sm-8">
-        <table id="mytable" class="table table emp-profile">
+        <table mat-table [dataSource]="bomNames" class="my-table">
+            <!-- Position Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> BOM name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
 
-          <thead class="center">
-            <tr>
-              <th></th>
-              <th>Status</th>
-              <th >Task name</th>
-              <th >BOM name </th>
-              <th >Date Added</th>
-              <th >Last Modified</th>
-              <th></th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
+            <!-- Name Column -->
+            <ng-container matColumnDef="dateAdded">
+                <th mat-header-cell *matHeaderCellDef> Date Added </th>
+                <td mat-cell *matCellDef="let element"> {{element.dateAdded | date}}</td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="lastModified">
+                <th mat-header-cell *matHeaderCellDef> Last Modified </th>
+                <td mat-cell *matCellDef="let element">{{element.lastModified | date}}</td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element"> <button (click)="deleteBom(element.name)" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/bom/', row.name]"></tr>
         </table>
-        <div style="height: 225px !important; overflow-y: auto;">
-          <table id="mytable" class="table table emp-profile">
-  
-            <thead class="">
-            </thead>
-            
-              <tbody>
-                
-                <tr *ngFor="let taskName of taskNames" [routerLink]="['/task/', taskName.name]">
-                  <td></td>
-                  <td>
-                    <div [ngSwitch]="taskName.status">
-                      <span *ngSwitchCase="'Created'" class="badge badge-pill badge-secondary">{{taskName.status}}</span>
-                      <span *ngSwitchCase="'Checked'" class="badge badge-pill badge-primary">{{taskName.status}}</span>
-                      <span *ngSwitchDefault class="badge badge-pill badge-sucess">{{taskName.status}}</span>
-                    </div>
-                    </td>
-                  <td >{{taskName.name}}</td>
-                  <td >{{taskName.bomName}}</td>
-                  <td >{{taskName.dateAdded | date}} </td>
-                  <td >{{taskName.lastModified | date}}</td>
-                  <td ><svg (click)="deleteTask(taskName.name)" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                      viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                      stroke-linejoin="round" class="feather feather-trash-2">
-                      <polyline points="3 6 5 6 21 6"></polyline>
-                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                      <line x1="10" y1="11" x2="10" y2="17"></line>
-                      <line x1="14" y1="11" x2="14" y2="17"></line>
-                    </svg>
-                  </td>
-                </tr>
-              </tbody>
-          </table>
-        
-      </div>
+    </div>
+</div>
+<div class="antras">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">TASKS List</h1>
+
+        <div class="btn-toolbar mb-2 mb-md-0">
+
+            <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" novalidate>
+                <div class="px-1">
+                    <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.." class="form-control form-control-sm">
+                </div>
+
+                <div class="btn-group mr-2">
+                    <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
+                    <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
+                </div>
+
+            </form>
+
+        </div>
+
 
     </div>
-  </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <app-create [bomNames]="bomNames"></app-create>
+        </div>
+        <div class="col-sm-8">
+            <table mat-table [dataSource]="taskNames" class="my-table">
+                <!-- Position Column -->
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef> BOM name </th>
+                    <td mat-cell *matCellDef="let element">
+                        <div [ngSwitch]="element.status">
+                            <span *ngSwitchCase="'Created'" class="badge badge-pill badge-secondary">{{element.status}}</span>
+                            <span *ngSwitchCase="'Checked'" class="badge badge-pill badge-primary">{{element.status}}</span>
+                            <span *ngSwitchDefault class="badge badge-pill badge-sucess">{{element.status}}</span>
+                        </div>
+
+                    </td>
+                </ng-container>
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="taskName">
+                    <th mat-header-cell *matHeaderCellDef> BOM name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="bomName">
+                    <th mat-header-cell *matHeaderCellDef> BOM name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.bomName}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="dateAdded">
+                    <th mat-header-cell *matHeaderCellDef> Date Added </th>
+                    <td mat-cell *matCellDef="let element"> {{element.dateAdded | date}}</td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="lastModified">
+                    <th mat-header-cell *matHeaderCellDef> Last Modified </th>
+                    <td mat-cell *matCellDef="let element">{{element.lastModified | date}}</td>
+                </ng-container>
+
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef> Action </th>
+                    <td mat-cell *matCellDef="let element"> <button (click)="deleteTask(element.name)" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns2;" [routerLink]="['/task/', row.name]"></tr>
+            </table>
+        </div>
+    </div>
 </div>
