--- a/src/app/BOM/complist/complist.component.css
+++ b/src/app/BOM/complist/complist.component.css
@@ -1,6 +1,65 @@
 .nerastas {
-    background-color: rgba(255, 0, 47, 0.138);
+    color: red;
 }
-.soso{
+
+.ok {
+    color: green;
+}
+
+a:hover,
+.link:hover {
+    font-weight: 500;
+    cursor: default;
+}
+
+.soso {
     background-color: rgba(255, 166, 0, 0.171);
+}
+
+table {
+    width: 100%;
+}
+
+tr.example-detail-row {
+    height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+    background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+    background: #efefef;
+}
+
+.example-element-row td {
+    border-bottom-width: 0;
+}
+
+.example-element-detail {
+    overflow: hidden;
+    display: flex;
+}
+
+.example-element-diagram {
+    min-width: 80px;
+    border: 2px solid black;
+    padding: 8px;
+    font-weight: lighter;
+    margin: 8px 0;
+    height: 104px;
+}
+
+.example-element-symbol {
+    font-weight: bold;
+    font-size: 40px;
+    line-height: normal;
+}
+
+.example-element-description {
+    padding: 16px;
+}
+
+.example-element-description-attribution {
+    opacity: 0.5;
 }
