--- a/src/app/BOM/complist/complist.component.html
+++ b/src/app/BOM/complist/complist.component.html
@@ -1,152 +1,205 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Bill Of Materials</h1>
+    <h1 class="h2">Bill Of Materials</h1>
 
-  <div class="btn-toolbar mb-2 mb-md-0">
+    <div class="btn-toolbar mb-2 mb-md-0">
 
-    <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" novalidate>
-      <div class="px-1">
-        <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.."
-          class="form-control form-control-sm">
-      </div>
+        <form class="form-inline d-flex justify-content-center text-light" #form="ngForm" novalidate>
+            <div class="px-1">
+                <input type="text" required name="CMnf" placeholder="Enter Manufacturer Number.." class="form-control form-control-sm">
+            </div>
 
-      <div class="btn-group mr-2">
-        <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
-        <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
-      </div>
-
-    </form>
-
-  </div>
-
-
+            <div class="btn-group mr-2">
+                <button type="submit" class="btn btn-sm btn-outline-secondary">Apply filters</button>
+                <button type="button" class="btn btn-sm btn-secondary">Clear Filters</button>
+            </div>
+        </form>
+    </div>
 </div>
+
+
+
+
+
 
 <div class="row">
-  <div class="col-sm-6">
+    <div class="col-sm-7">
 
-    <table id="mytable" class="table table-sm emp-profile">
+        <!-- app.component.html -->
+        <table mat-table [dataSource]="this.bomList" #mytable class="my-table mat-elevation-z8">
 
-      <thead class="center">
-        <tr>
-          <th></th>
-          <th>Buhalerinis nr.</th>
-          <th>Gamintojo kodas</th>
-          <th>QTY</th>
-          <th>BOM ID </th>
-          <th>Component ID</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody class="overflow-auto"> 
-        <tr *ngFor="let bomList of bomList">
-          <td *ngIf="bomList.componentasId > 0"></td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0"></td>
-          <td *ngIf="bomList.componentasId > 0">{{bomList.buhNr}}</td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0">{{bomList.buhNr}}</td>
-          <td *ngIf="bomList.componentasId > 0" [routerLink]="['/members/', bomList.componentasId]">
-            {{bomList.manufPartNr}}</td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0">{{bomList.manufPartNr}}</td>
-          <td *ngIf="bomList.componentasId > 0">{{bomList.qty}} </td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0"> </td>
-          <td *ngIf="bomList.componentasId > 0">{{bomList.bomNameId}} </td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0"></td>
-          <td *ngIf="bomList.componentasId > 0">{{bomList.componentasId}} </td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0">Nerastas KOMPONENTAS sistemoje </td>
-          <td *ngIf="bomList.componentasId > 0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" class="feather feather-edit">
+            <!--- Note that these columns can be defined in any order.The actual rendered columns are set as a property on the row definition" -->
+
+
+            <!-- Buh. Nr. Column -->
+            <ng-container matColumnDef="buhNr">
+                <th mat-header-cell *matHeaderCellDef> Buhalterinis numeris </th>
+                <td mat-cell *matCellDef="let element">
+                    <div *ngIf="element.componentasId	 === 0" class="nerastas"> {{element.buhNr}} </div>
+                    <div *ngIf="element.componentasId	 > 0" class=""> {{element.buhNr}} </div>
+                </td>
+            </ng-container>
+            <!-- Mnf Column -->
+            <ng-container matColumnDef="manufPartNr">
+                <th mat-header-cell *matHeaderCellDef> Gamintojo kodas </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.componentasId	 === 0" class="nerastas"> {{element.manufPartNr}} </div>
+                        <div [routerLink]="['/members/', element.componentasId]" *ngIf="element.componentasId	 > 0" class="link"> {{element.manufPartNr}} </div>
+                    </td>
+                </div>
+            </ng-container>
+
+            <!-- Component ID Column -->
+            <ng-container matColumnDef="componentasId">
+                <th mat-header-cell *matHeaderCellDef> Komponento numeris </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.componentasId	 === 0" class="nerastas"> Nerastas KOMPONENTAS sistemoje </div>
+                        <div *ngIf="element.componentasId	 > 0" class=""> {{element.componentasId}}</div>
+                    </td>
+                </div>
+            </ng-container>
+            <!-- QTY Column -->
+            <ng-container matColumnDef="QTY">
+                <th mat-header-cell *matHeaderCellDef> QTY </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.componentasId	 === 0" class="nerastas"> {{element.qty}} </div>
+                        <div *ngIf="element.componentasId	 > 0" class=""> {{element.qty}} </div>
+                    </td>
+                </div>
+            </ng-container>
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element">
+                    <div *ngIf="element.componentasId	 === 0" class="nerastas"> <button (click)="updateRowData(element)" type="button" class="btn btn-light btn-sm"><i class="fas fa-edit"></i></button> <a (click)="deleteRowData(element)"><button type="button" class="btn btn-secondary btn-sm"><i class="fas fa-trash"></i></button></a></div>
+                    <div *ngIf="element.componentasId	 > 0" class=""><button (click)="updateRowData(element)" type="button" class="btn btn-light btn-sm"><i class="fas fa-edit"></i></button> <a (click)="deleteRowData(element)"><button type="button" class="btn btn-secondary btn-sm"><i class="fas fa-trash"></i></button></a></div>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+
+
+
+        <!--
+        <table id="mytable" class="table table-sm emp-profile">
+
+            <thead class="center">
+                <tr>
+                    <th></th>
+                    <th>Buhalerinis nr.</th>
+                    <th>Gamintojo kodas</th>
+                    <th>QTY</th>
+                    <th>BOM ID </th>
+                    <th>Component ID</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody class="overflow-auto">
+                <tr *ngFor="let bomList of bomList">
+                    <td *ngIf="bomList.componentasId > 0"></td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0"></td>
+                    <td *ngIf="bomList.componentasId > 0">{{bomList.buhNr}}</td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0">{{bomList.buhNr}}</td>
+                    <td *ngIf="bomList.componentasId > 0" [routerLink]="['/members/', bomList.componentasId]">
+                        {{bomList.manufPartNr}}</td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0">{{bomList.manufPartNr}}</td>
+                    <td *ngIf="bomList.componentasId > 0">{{bomList.qty}} </td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0"> </td>
+                    <td *ngIf="bomList.componentasId > 0">{{bomList.bomNameId}} </td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0"></td>
+                    <td *ngIf="bomList.componentasId > 0">{{bomList.componentasId}} </td>
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0">Nerastas KOMPONENTAS sistemoje </td>
+                    <td *ngIf="bomList.componentasId > 0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="feather feather-trash-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
               <polyline points="3 6 5 6 21 6"></polyline>
               <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
               <line x1="10" y1="11" x2="10" y2="17"></line>
               <line x1="14" y1="11" x2="14" y2="17"></line>
             </svg></td>
-          <td class="nerastas" *ngIf="bomList.componentasId === 0"><svg xmlns="http://www.w3.org/2000/svg" width="24"
-              height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" class="feather feather-edit">
+                    <td class="nerastas" *ngIf="bomList.componentasId === 0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="feather feather-trash-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
               <polyline points="3 6 5 6 21 6"></polyline>
               <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
               <line x1="10" y1="11" x2="10" y2="17"></line>
               <line x1="14" y1="11" x2="14" y2="17"></line>
             </svg></td>
-        </tr>
+                </tr>
 
-      </tbody>
-    </table>
+            </tbody>
+        </table>
+      -->
+
+    </div>
+
+    <div class="col-sm-1 ">
+        <form [formGroup]="registerForm" (ngSubmit)="submit()">
+            <div class="col-xs-1 mt-2 ">
+                <label for="ex1">x QTY</label>
+                <input class="form-control" type="number" formControlName="xQTY" placeholder="X">
+                <button type="submit" class="btn btn-block btn-secondary mt-2">Check</button>
+            </div>
+        </form>
+    </div>
 
 
-  </div>
-  <div class="col-sm-1">
-    <form [formGroup]="registerForm" (ngSubmit)="submit()">
-      <div class="col-xs-1">
-        <label for="ex1">x QTY</label>
-        <input class="form-control" type="number" formControlName="xQTY" placeholder="X">
-        <button type="submit" class="btn btn-block btn-secondary mt-2">Check</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-sm-5">
-    <table id="mytable" class="table table-sm emp-profile">
+    <div class="col-sm-4">
+        <!-- app.component.html -->
+        <table mat-table [dataSource]="this.xbomList" #mytable class="my-table mat-elevation-z8">
 
-      <thead class="center">
-        <tr>
-          <th></th>
-          <th>BOM name id</th>
-          <th>Reikiamas QTY</th>
-          <th>Turime sandėlyje</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let xbomList of xbomList">
-          <td class="nerastas" *ngIf="xbomList.xQty > xbomList.qtyInDb "></td>
-          <td class="soso" *ngIf="xbomList.xQty == xbomList.qtyInDb "></td>
-          <td *ngIf="xbomList.xQty < xbomList.qtyInDb "></td>
-          <td class="nerastas" *ngIf="xbomList.xQty > xbomList.qtyInDb ">{{xbomList.bomNameId}}</td>
-          <td class="soso" *ngIf="xbomList.xQty == xbomList.qtyInDb ">{{xbomList.bomNameId}}</td>
-          <td *ngIf="xbomList.xQty < xbomList.qtyInDb ">{{xbomList.bomNameId}}</td>
-          <td class="nerastas" *ngIf="xbomList.xQty > xbomList.qtyInDb ">{{xbomList.xQty}}</td>
-          <td class="soso" *ngIf="xbomList.xQty == xbomList.qtyInDb "><strong>{{xbomList.xQty}}</strong></td>
-          <td *ngIf="xbomList.xQty < xbomList.qtyInDb ">{{xbomList.xQty}}</td>
-          <td class="nerastas" *ngIf="xbomList.xQty > xbomList.qtyInDb "><strong>{{xbomList.qtyInDb}}</strong></td>
-          <td class="soso" *ngIf="xbomList.xQty == xbomList.qtyInDb "><strong>{{xbomList.qtyInDb}}</strong></td>
-          <td *ngIf="xbomList.xQty < xbomList.qtyInDb ">{{xbomList.qtyInDb}}</td>
-          <td class="nerastas" *ngIf="xbomList.xQty > xbomList.qtyInDb "><svg xmlns="http://www.w3.org/2000/svg"
-              width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right-circle">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 16 16 12 12 8"></polyline>
-              <line x1="8" y1="12" x2="16" y2="12"></line>
-            </svg></td>
-          <td class="soso" *ngIf="xbomList.xQty == xbomList.qtyInDb "><svg xmlns="http://www.w3.org/2000/svg" width="24"
-              height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" class="feather feather-arrow-right-circle">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 16 16 12 12 8"></polyline>
-              <line x1="8" y1="12" x2="16" y2="12"></line>
-            </svg></td>
-          <td *ngIf="xbomList.xQty < xbomList.qtyInDb "><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" class="feather feather-arrow-right-circle">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 16 16 12 12 8"></polyline>
-              <line x1="8" y1="12" x2="16" y2="12"></line>
-            </svg></td>
-        </tr>
+            <!--- Note that these columns can be defined in any order.The actual rendered columns are set as a property on the row definition" -->
 
-      </tbody>
-    </table>
-    <button *ngIf="check === true"  type="s" class="btn btn-block btn-secondary mt-2">Get order List</button>
-  </div>
-</div>
+
+            <!-- Component ID Column -->
+            <ng-container matColumnDef="xcomponentasId">
+                <th mat-header-cell *matHeaderCellDef> Turimas kiekis sandėlyje </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.qtyInDb	 < element.xQty" class="nerastas"> <strong>{{element.qtyInDb}}</strong> </div>
+                        <div *ngIf="element.qtyInDb	 > element.xQty" class=""> {{element.qtyInDb}}</div>
+                    </td>
+                </div>
+            </ng-container>
+            <!-- QTY Column -->
+            <ng-container matColumnDef="xQTY">
+                <th mat-header-cell *matHeaderCellDef> Reikiamas kiekis </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.qtyInDb	 < element.xQty" class="nerastas"> {{element.xQty}} </div>
+                        <div *ngIf="element.qtyInDb	 > element.xQty" class=""> {{element.xQty}} </div>
+                    </td>
+                </div>
+            </ng-container>
+            <!-- QTY Column -->
+            <ng-container matColumnDef="truksta">
+                <th mat-header-cell *matHeaderCellDef> Trūksta </th>
+                <div>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.qtyInDb	 < element.xQty" class="nerastas"> {{element.xQty - element.qtyInDb}} </div>
+                        <div *ngIf="element.qtyInDb	 > element.xQty" class="ok"> OK ({{element.qtyInDb - element.xQty}})</div>
+                    </td>
+                </div>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="xdisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: xdisplayedColumns;"></tr>
+        </table>
+
+
+        <!--
+        <button *ngIf="check === true" type="s" class="btn btn-block btn-secondary mt-2">Get order List</button>
+    </div>
+     -->
+    </div>
