--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,4 +1,7 @@
-<p>
-  lists works!
-</p>
-<i class="fas fa-angle-right"></i>
+<div class="row mt-3">
+    <div class="col-sm-4">
+        <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" (keyup.enter)="submit($event)" />
+    </div>
+</div>
+
+<app-listByVar *ngIf="this.currentLocation !== null" [location]="currentLocation" [events]="eventsSubject.asObservable()"></app-listByVar>
